--- a/css/style.css
+++ b/css/style.css
@@ -85,3 +85,14 @@ P.newstheme {
 .date{
     color: #c9d2d4;
 }
+.fixed-nav-bar-button1 {
+        background-color: green;
+    color: white;
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: underline;
+    font-size: 20px;
+    outline-color: white;
+}
